syntax = "proto3";

option go_package = "github.com/sarpt/gamedbv/pkg/rpc/dl";

service Dl {
  rpc DownloadPlatforms(PlatformsDownloadReq) returns (stream PlatformsDownloadStatus) {}
}

message PlatformsDownloadReq {
  repeated string platforms = 1;
}

message PlatformsDownloadStatus {
  string platform = 1;
  string process = 2;
  string step = 3;
  string message = 4;
}
