syntax = "proto3";

option go_package = "github.com/sarpt/gamedbv/pkg/rpc/idx";

service Idx {
  rpc PreparePlatforms(PreparePlatformsReq) returns (stream PreparePlatformsStatus) {}
  rpc InitializeDatabase(InitializeDatabaseReq) returns (stream InitializeDatabaseStatus) {}
}

message InitializeDatabaseReq {
  bool force = 1;
  string path = 2;
  string variant = 3;
}

message InitializeDatabaseStatus {
  string step = 1;
  string message = 2;
}

message PreparePlatformsReq {
  repeated string platforms = 1;
}

message PreparePlatformsStatus {
  string platform = 1;
  string process = 2;
  string step = 3;
  string message = 4;
}
